tests/ui/fmt/issue-91556.stderr
error: invalid format string: expected `}` but string was terminated
  --> $DIR/issue-91556.rs:2:19
   |
LL |   let _ = format!(concat!("{0}ğ–³ğ–¾ğ—Œğ—{"), i);
   |                   ^^^^^^^^^^^^^^^^^^^ expected `}` in format string
   |
   = note: if you intended to print `{`, you can escape it using `{{`

error: aborting due to 1 previous error

